# ariaflow-server

./: .claudeignore  .gitignore  AGENTS.md  AI-USAGE.md  ARCHITECTURE.md  BGS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FRONTEND-GUIDE.md  GAPS.md  LICENSE  Makefile  README.md  RELEASE.md  SCHEDULER.md  openapi.yaml  pyproject.toml
.github/workflows/: macos-install.yml  release.yml  test.yml
docs/: ALL_VARIABLES.md  ARCHITECTURE.md  ARIA2_RPC_WRAPPERS.md  AUDIT.md  BACKEND_GAPS_REQUESTED_BY_FRONTEND.md  BUGFIX_PLAN.md  CODING_RULES.md  FRONTEND-GUIDE.md  GAPS-RENAME.md  GAPS.md  NAMING_GAPS.md  PLAN.md  REFACTOR_PLAN.md  RELEASE.md  SPEC.md  STATES_AND_INTERACTIONS.md
docs/governance/: BGS-GAPS.md  BGS.md  TODO-bgs-update.md  asm-state-model.md  bgs-decision.yaml  biss-classification.md  tic-oracle.md
scripts/: check_bgs_drift.py  check_tic_coverage.py  gen_openapi.py  gen_rpc_docs.py  homebrew_formula.py  publish.py  release.py
src/aria_queue/: __init__.py  api.py  aria2_rpc.py  bandwidth.py  bonjour.py  cli.py  contracts.py  core.py  discovery.py  install.py  openapi.yaml  openapi_schemas.py  queue_ops.py  reconcile.py  routes.py  scheduler.py  state.py  storage.py  torrent.py  transfers.py  web.py  webapp.py
src/aria_queue/platform/: detect.py  launchd.py  linux.py  windows.py
src/aria_queue/routes/: aria2.py  config.py  downloads.py  helpers.py  lifecycle.py  meta.py  peers.py  scheduler.py  sessions.py  torrents.py
src/ariaflow_server/: __init__.py  bonjour.py  discovery.py  install.py
src/ariaflow_server/platform/: detect.py  launchd.py
tests/: conftest.py  test_api.py  test_api_coverage.py  test_aria2_rpc_wrappers.py  test_cli.py  test_cross_check.py  test_homebrew_formula.py  test_naming_conventions.py  test_platform.py  test_regressions.py  test_release.py  test_scenarios.py  test_tic.py  test_unit.py  test_unit_coverage.py  test_web.py
tests/scheduler/: __init__.py  test_queue_scheduler.py
