[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ariaflow"
version = "0.1.1"
description = "Sequential aria2 queue driver with adaptive bandwidth control"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
web = []
launchd = []

[project.scripts]
ariaflow = "aria_queue.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
