[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ariaflow-server"
version = "0.1.165"
description = "Sequential aria2 download scheduler with adaptive bandwidth control"
requires-python = ">=3.10"
dependencies = ["portalocker>=2.0"]
license = {text = "Proprietary"}
readme = "README.md"
authors = [{name = "bonomani"}]
keywords = ["aria2", "download", "scheduler", "queue", "torrent", "bandwidth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/bonomani/ariaflow-server"
Repository = "https://github.com/bonomani/ariaflow-server"
Issues = "https://github.com/bonomani/ariaflow-server/issues"

[project.optional-dependencies]
web = []
launchd = []

[project.scripts]
ariaflow-server = "ariaflow_server.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ariaflow_server = ["openapi.yaml"]
